--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@ code {
     monospace;
 }
 
+.container {
+    background-image: url('./images/background2.svg');
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 @font-face {
     font-family: 'IsYun';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202-2@1.0/LeeSeoyun.woff') format('woff');
