--- a/src/pages/StartPage.css
+++ b/src/pages/StartPage.css
@@ -6,6 +6,10 @@
     height: 100vh;
     gap: 20px;
     padding: 20px;
+    background-image: url('../images/background.svg');
+    background-size: cover;
+    background-position: center;
+    
   }
 
 .titleBox{
@@ -23,9 +27,10 @@
 .welcome-text {
   font-size: 16px;
   color: #333;
+  font-family: 'IsYun';
 }
 
-.buttonBox{
+.buttonBox1{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -41,8 +46,9 @@
   padding: 12px;
   border: none;
   border-radius: 35px;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
+  font-family: 'IsYun';
 }
 .google-button{
   gap: 3%;
